src/objects/Intervention__c.object
<CustomObject>
    <description>List the intervention needed for a given investigation</description>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <inlineHelpText>Detail here the additional information related to this intervention</inlineHelpText>
        <label>Additional Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <inlineHelpText>Reason this intervention was not done and cancelled</inlineHelpText>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intervention_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Intervention Type</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Investigation</value>
            </filterItems>
            <filterItems>
                <field>Intervention_Type__c.Name</field>
                <operation>equals</operation>
                <value>Internal Investigation</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Internal Investigation</value>
            </filterItems>
            <filterItems>
                <field>Intervention_Type__c.Name</field>
                <operation>notEqual</operation>
                <value>Internal Investigation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intervention_Type__c</referenceTo>
        <relationshipLabel>Interventions</relationshipLabel>
        <relationshipName>Interventions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvestigationId__c</fullName>
        <formula>Investigation__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InvestigationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Leader_Email__c</fullName>
        <description>Updates information related to the Investigation Leader into the intervention record so that it may be used in workflows associated with the intervention object</description>
        <inlineHelpText>Email address of the lead investigator</inlineHelpText>
        <label>Investigation Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Investigation_Leader_Full_Name__c</fullName>
        <description>Updates information related to the Investigation Leader into the intervention record so that it may be used in workflows associated with the intervention object</description>
        <inlineHelpText>First Name of the Investigation Leader</inlineHelpText>
        <label>Investigation Leader Full Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Leader_Phone_Number__c</fullName>
        <description>Updates information related to the Investigation Leader into the intervention record so that it may be used in workflows associated with the intervention object</description>
        <inlineHelpText>Phone # of the Lead Investigator</inlineHelpText>
        <label>Investigation Leader Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Interventions</relationshipLabel>
        <relationshipName>Interventions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Leader_Email_Workflow__c</fullName>
        <label>Leader Email Workflow</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <inlineHelpText>Detail here the observations of the investigator</inlineHelpText>
        <label>Investigator Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portal_User_Instructions__c</fullName>
        <inlineHelpText>Instructions to be given to the portal user in order to complete internal investigation.</inlineHelpText>
        <label>Portal User Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <description>Updates information related to the Email Id of the Provider,  into the intervention record so that it may be used in workflows associated with the intervention object</description>
        <inlineHelpText>Email id of the provider</inlineHelpText>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Do</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Submit via Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <inlineHelpText>Date the internal investigation was submitted.</inlineHelpText>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Be_Provided_By__c</fullName>
        <inlineHelpText>Deadline to fill internal investigation</inlineHelpText>
        <label>To Be Provided By</label>
        <type>Date</type>
    </fields>
    <label>Intervention</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Intervention ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interventions</pluralLabel>
    <recordTypes>
        <fullName>Internal_Investigation</fullName>
        <active>true</active>
        <description>Use this type only for internal investigation request</description>
        <label>Internal Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Intervention</fullName>
        <active>true</active>
        <description>Select this record type for an intervention other than internal investigation</description>
        <label>Other Intervention</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Creation_Updates_on_Closed_Investigation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Investigation__r.Investigation_Status__c,&apos;Closed&apos;),$UserRole.Name !=&apos;Executive_and_Directors&apos;, $UserRole.Name!=&apos;Regional_Director&apos;,OR(NOT(OR(CONTAINS($UserRole.DeveloperName,&apos;Director&apos;),CONTAINS($UserRole.DeveloperName,&apos;Supervisor&apos;))),AND($UserRole.DeveloperName==&apos;FCC_Supervisor&apos;, Investigation__r.Provider_No__r.RecordType.Name != &apos;Family Child Care&apos;), AND($UserRole.DeveloperName==&apos;SLGSA_Supervisor&apos;,AND(Investigation__r.Provider_No__r.RecordType.Name != &apos;Large Group&apos;, Investigation__r.Provider_No__r.RecordType.Name != &apos;Small Group&apos;)) ,AND($UserRole.DeveloperName==&apos;R_P_Supervisor&apos;, Investigation__r.Provider_No__r.RecordType.Name != &apos;Group Care&apos;,Investigation__r.Provider_No__r.RecordType.Name != &apos;Temporary Shelter&apos;,Investigation__r.Provider_No__r.RecordType.Name != &apos;Adoption Agency&apos;,Investigation__r.Provider_No__r.RecordType.Name != &apos;Foster Care Agency&apos;)))</errorConditionFormula>
        <errorMessage>Interventions can&apos;t be created or updated on &apos;Closed&apos; Investigation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Cancel_Require_Reason</fullName>
        <active>true</active>
        <description>If the status is cancelled then a reason should be provided</description>
        <errorConditionFormula>AND (ISPICKVAL( Status__c , &quot;Cancelled&quot;), OR(ISNULL( Cancel_Reason__c ), ISBLANK (Cancel_Reason__c ), Cancel_Reason__c = &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Cancel_Reason__c</errorDisplayField>
        <errorMessage>Please provide the reason this intervention was not done and cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Done_Require_Date</fullName>
        <active>true</active>
        <description>Date of completion should be filled if status is done</description>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Done&quot;), OR(ISNULL( Date_Completed__c ), ISBLANK(Date_Completed__c )))</errorConditionFormula>
        <errorDisplayField>Date_Completed__c</errorDisplayField>
        <errorMessage>Date completed must be provided if this intervention is done</errorMessage>
    </validationRules>
</CustomObject>